# tffb

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  Makefile  README.md
src/: tffb.cpp  tffb.f90
tests/: parameter_flexi_tf.ini  test.f90  test_run.f90
tests/model/: keras_metadata.pb  saved_model.pb
tests/model/variables/: variables.data-00000-of-00001  variables.index
